- Update styling of SelectedItemsActionsPanel. Now looks like latest design. - Left and right content in SelectedItemsActionsPanel now automatically gets placed in a row with gap. There is no longer a need to have manual spacing between buttons. - Add SelectedItemsActionsPadding for standardised padding when placing SelectedItemsActionsPanel in a container with border. - Update stories, including a story with SelectedItemsActionsPanel placed above StandardTable. - Remove CSS variables from Heading.

--- a/packages/core/src/components/heading/Heading.module.css
+++ b/packages/core/src/components/heading/Heading.module.css
@@ -1,38 +1,33 @@
 .heading {
-  --swui-heading-text-color: var(--swui-text-primary-color);
-  --swui-heading-font-family: var(--swui-font-primary);
-  --swui-heading-font-weight: var(--swui-font-weight-text-bold);
-  --swui-heading-line-height: var(--swui-line-height);
-
-  font-size: var(--swui-heading-font-size);
-  color: var(--swui-heading-text-color);
+  font-size: 2rem;
+  color: var(--swui-text-primary-color);
   letter-spacing: 0;
   margin: 0;
-  line-height: var(--swui-heading-line-height);
-  font-family: var(--swui-heading-font-family);
-  font-weight: var(--swui-heading-font-weight);
+  line-height: var(--swui-line-height);
+  font-family: var(--swui-font-primary);
+  font-weight: var(--swui-font-weight-text-bold);
 
   &.h1 {
-    --swui-heading-font-size: 2.8rem;
+    font-size: 2.8rem;
   }
 
   &.h2 {
-    --swui-heading-font-size: 2.4rem;
+    font-size: 2.4rem;
   }
 
   &.h3 {
-    --swui-heading-font-size: 2rem;
+    font-size: 2rem;
   }
 
   &.h4 {
-    --swui-heading-font-size: 1.8rem;
+    font-size: 1.8rem;
   }
 
   &.h5 {
-    --swui-heading-font-size: 1.6rem;
+    font-size: 1.6rem;
   }
 
   &.h6 {
-    --swui-heading-font-size: 1.4rem;
+    font-size: 1.4rem;
   }
 }
